--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -1,15 +1,31 @@
-<html>
-    <head>
-        <title>Main page</title>
-    </head>
-    <body>
-        <h1>Welcome to Climbanach main page!</h1>
-        <p>Information will appear here soon</p>
-        <li>News</li>
-        <li>Routes</li>
-        <li>Contacts</li>
-    </body>
-    <footer>
-        Climbanach project 2020
-    </footer>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>Climbanach main page</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Climbanach web page">
+
+    <meta name="keywords" content="django">
+    <!-- bootstap -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <!-- boostrap css -->
+  </head>
+
+  <body>
+    <div id="starting">
+      <div class="container">
+        <div class="row">
+          <h1>Climbanach main page</h1>
+          &emsp;
+          
+        </div>
+      </div>
+      <div><a href="/articles">Articles</a></div>
+    <div><a href="#">Traces map</a></div>
+    <div><a href="#">About</a></div>
+    </div>
+
+ 
+  </body>
 </html>
